Fix: scroll isue on mobile screens in cards section

--- a/components/sections/cards/cards.scss
+++ b/components/sections/cards/cards.scss
@@ -17,6 +17,7 @@
 		display: flex;
 		flex-direction: row;
 		overflow-x: scroll;
+		overflow-y: hidden;
 		margin: 0 auto;
 		justify-content: center;
 		z-index: 5;
